selfhost/test/typechecker/funcdecl_error_return_type_mismatch_empty.out
Error at %FILE_NAME%:1:6
Return type mismatch for function 'foo'
  |  func foo(a: Int, b: String): Bool { }
          ^
Expected Bool
but function had empty body
